--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "ansicolor": "^2.0.3",
     "antd": "^5.21.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
