--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,13 @@ joblib==1.4.2
 lb-matching-tools==2024.1.30.1
 liblistenbrainz==0.5.5
 MarkupSafe==3.0.1
+marshmallow==3.23.1
 more-itertools==10.5.0
 msgspec==0.18.6
 mutagen==1.46.0
 packaging==24.1
 peewee==3.17.7
 psutil==6.1.0
-psycopg2-binary==2.9.10
 py-sonic==1.0.1
 pybind11==2.13.6
 python-dateutil==2.9.0.post0
