--- a/example.env
+++ b/example.env
@@ -31,3 +31,7 @@ CACHE_PATH=./data/session
 # Session duration. How long to keep session cookie.
 # Default: 1 day
 SESSION_DURATION_SEC=86400
+
+# Run mode. For simple reload and dev, set this to debug (lowercase)
+# Default: production (gunicorn)
+MODE=production
