--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,11 @@ lb-matching-tools==2024.1.30.1
 liblistenbrainz==0.5.5
 MarkupSafe==3.0.1
 marshmallow==3.23.1
+marshmallow_dataclass==8.7.1
 more-itertools==10.5.0
 msgspec==0.18.6
 mutagen==1.46.0
+mypy-extensions==1.0.0
 packaging==24.1
 peewee==3.17.7
 psutil==6.1.0
@@ -33,7 +35,10 @@ spotipy==2.24.0
 threadpoolctl==3.5.0
 tqdm==4.66.5
 troi==2024.8.30.1
+typeguard==4.4.1
 types-peewee==3.17.7.20241017
+typing-inspect==0.9.0
+typing_extensions==4.12.2
 ujson==5.10.0
 Unidecode==1.3.8
 urllib3==2.2.3
